--- a/scss/stylesheets/_layout.scss
+++ b/scss/stylesheets/_layout.scss
@@ -10,11 +10,19 @@
   }
   .icon {
     background-color: #E2EDFA;
-    color: $secondary;
+    color: $primary;
+    border: 2px solid $primary;
+    &:hover {
+      color: $cyan;
+      background-color: $primary;
+      border: 2px solid $cyan;
+    }
   }
 }
 body {
   background-color: #EFECE7;
+  background-image: linear-gradient(90deg, rgba(112, 112, 112, 0.3) 1%, transparent 0), linear-gradient(rgba(112, 112, 112, 0.3) 1%, transparent 0);
+  background-size: 80px 80px;
 }
 .navbar-brand {
   font-weight: 900;
