--- a/scss/stylesheets/helpers/_variables.scss
+++ b/scss/stylesheets/helpers/_variables.scss
@@ -45,7 +45,7 @@ $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
-$cyan:    #0dcaf0 !default;
+$cyan:    #E2EDFA;//#0dcaf0 !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -67,8 +67,8 @@ $colors: (
 // scss-docs-end colors-map
 
 // scss-docs-start theme-color-variables
-$primary:       $blue !default;
-$secondary:     #03438D; //$gray-600 !default;
+$primary:       #03438D; //$blue !default;
+$secondary:     #EEC32A; //$gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
@@ -649,7 +649,7 @@ $small-font-size:             .875em !default;
 
 $sub-sup-font-size:           .75em !default;
 
-$text-muted:                  $gray-600 !default;
+$text-muted:                  #9B9893; //$gray-600 !default;
 
 $initialism-font-size:        $small-font-size !default;
 
