--- a/css/style.css
+++ b/css/style.css
@@ -6785,7 +6785,7 @@
   --bs-success: #198754;
   --bs-info: #E2EDFA;
   --bs-warning: #ffc107;
-  --bs-danger: #dc3545;
+  --bs-danger: #F57375;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 3, 67, 141;
@@ -6793,7 +6793,7 @@
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 226, 237, 250;
   --bs-warning-rgb: 255, 193, 7;
-  --bs-danger-rgb: 220, 53, 69;
+  --bs-danger-rgb: 245, 115, 117;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-white-rgb: 255, 255, 255;
@@ -8903,15 +8903,15 @@ progress {
 }
 
 .table-danger {
-  --bs-table-bg: #f8d7da;
-  --bs-table-striped-bg: #eccccf;
+  --bs-table-bg: #fde3e3;
+  --bs-table-striped-bg: #f0d8d8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #dfc2c4;
+  --bs-table-active-bg: #e4cccc;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e5c7ca;
+  --bs-table-hover-bg: #ead2d2;
   --bs-table-hover-color: #000;
   color: #000;
-  border-color: #dfc2c4;
+  border-color: #e4cccc;
 }
 
 .table-light {
@@ -9821,7 +9821,7 @@ textarea.form-control-lg {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #dc3545;
+  color: #F57375;
 }
 
 .invalid-tooltip {
@@ -9833,8 +9833,8 @@ textarea.form-control-lg {
   padding: 0.25rem 0.5rem;
   margin-top: .1rem;
   font-size: 0.875rem;
-  color: #fff;
-  background-color: rgba(220, 53, 69, 0.9);
+  color: #000;
+  background-color: rgba(245, 115, 117, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -9846,18 +9846,18 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
-  border-color: #dc3545;
+  border-color: #F57375;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23F57375'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23F57375' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
-  border-color: #dc3545;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  border-color: #F57375;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
 }
 
 .was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
@@ -9866,37 +9866,37 @@ textarea.form-control-lg {
 }
 
 .was-validated .form-select:invalid, .form-select.is-invalid {
-  border-color: #dc3545;
+  border-color: #F57375;
 }
 
 .was-validated .form-select:invalid:not([multiple]):not([size]), .was-validated .form-select:invalid:not([multiple])[size="1"], .form-select.is-invalid:not([multiple]):not([size]), .form-select.is-invalid:not([multiple])[size="1"] {
   padding-right: 4.125rem;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e"), url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23F57375'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23F57375' stroke='none'/%3e%3c/svg%3e");
   background-position: right 0.75rem center, center right 2.25rem;
   background-size: 16px 12px, calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-select:invalid:focus, .form-select.is-invalid:focus {
-  border-color: #dc3545;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  border-color: #F57375;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
 }
 
 .was-validated .form-check-input:invalid, .form-check-input.is-invalid {
-  border-color: #dc3545;
+  border-color: #F57375;
 }
 
 .was-validated .form-check-input:invalid:checked, .form-check-input.is-invalid:checked {
-  background-color: #dc3545;
+  background-color: #F57375;
 }
 
 .was-validated .form-check-input:invalid:focus, .form-check-input.is-invalid:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
+          box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.25);
 }
 
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
-  color: #dc3545;
+  color: #F57375;
 }
 
 .form-check-inline .form-check-input ~ .invalid-feedback {
@@ -9952,8 +9952,8 @@ textarea.form-control-lg {
 
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .btn:disabled, .btn.disabled,
@@ -10168,44 +10168,44 @@ fieldset:disabled .btn {
 }
 
 .btn-danger {
-  color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  color: #000;
+  background-color: #F57375;
+  border-color: #F57375;
 }
 
 .btn-danger:hover {
-  color: #fff;
-  background-color: #bb2d3b;
-  border-color: #b02a37;
+  color: #000;
+  background-color: #f7888a;
+  border-color: #f68183;
 }
 
 .btn-check:focus + .btn-danger, .btn-danger:focus {
-  color: #fff;
-  background-color: #bb2d3b;
-  border-color: #b02a37;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
+  color: #000;
+  background-color: #f7888a;
+  border-color: #f68183;
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(208, 98, 99, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(208, 98, 99, 0.5);
 }
 
 .btn-check:checked + .btn-danger,
 .btn-check:active + .btn-danger, .btn-danger:active, .btn-danger.active,
 .show > .btn-danger.dropdown-toggle {
-  color: #fff;
-  background-color: #b02a37;
-  border-color: #a52834;
+  color: #000;
+  background-color: #f78f91;
+  border-color: #f68183;
 }
 
 .btn-check:checked + .btn-danger:focus,
 .btn-check:active + .btn-danger:focus, .btn-danger:active:focus, .btn-danger.active:focus,
 .show > .btn-danger.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(225, 83, 97, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(208, 98, 99, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(208, 98, 99, 0.5);
 }
 
 .btn-danger:disabled, .btn-danger.disabled {
-  color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  color: #000;
+  background-color: #F57375;
+  border-color: #F57375;
 }
 
 .btn-light {
@@ -10461,36 +10461,36 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-danger {
-  color: #dc3545;
-  border-color: #dc3545;
+  color: #F57375;
+  border-color: #F57375;
 }
 
 .btn-outline-danger:hover {
-  color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  color: #000;
+  background-color: #F57375;
+  border-color: #F57375;
 }
 
 .btn-check:focus + .btn-outline-danger, .btn-outline-danger:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.5);
 }
 
 .btn-check:checked + .btn-outline-danger,
 .btn-check:active + .btn-outline-danger, .btn-outline-danger:active, .btn-outline-danger.active, .btn-outline-danger.dropdown-toggle.show {
-  color: #fff;
-  background-color: #dc3545;
-  border-color: #dc3545;
+  color: #000;
+  background-color: #F57375;
+  border-color: #F57375;
 }
 
 .btn-check:checked + .btn-outline-danger:focus,
 .btn-check:active + .btn-outline-danger:focus, .btn-outline-danger:active:focus, .btn-outline-danger.active:focus, .btn-outline-danger.dropdown-toggle.show:focus {
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
-          box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.5);
+  -webkit-box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.5);
+          box-shadow: 0 0 0 0.25rem rgba(245, 115, 117, 0.5);
 }
 
 .btn-outline-danger:disabled, .btn-outline-danger.disabled {
-  color: #dc3545;
+  color: #F57375;
   background-color: transparent;
 }
 
@@ -12108,8 +12108,8 @@ fieldset:disabled .btn {
   z-index: 3;
   border-color: #81a1c6;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 .accordion-header {
@@ -12409,13 +12409,13 @@ fieldset:disabled .btn {
 }
 
 .alert-danger {
-  color: #842029;
-  background-color: #f8d7da;
-  border-color: #f5c2c7;
+  color: #934546;
+  background-color: #fde3e3;
+  border-color: #fcd5d6;
 }
 
 .alert-danger .alert-link {
-  color: #6a1a21;
+  color: #763738;
 }
 
 .alert-light {
@@ -12852,19 +12852,19 @@ fieldset:disabled .btn {
 }
 
 .list-group-item-danger {
-  color: #842029;
-  background-color: #f8d7da;
+  color: #934546;
+  background-color: #fde3e3;
 }
 
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #842029;
-  background-color: #dfc2c4;
+  color: #934546;
+  background-color: #e4cccc;
 }
 
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #842029;
-  border-color: #842029;
+  background-color: #934546;
+  border-color: #934546;
 }
 
 .list-group-item-light {
@@ -12920,8 +12920,8 @@ fieldset:disabled .btn {
 
 .btn-close:focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
-          box-shadow: 0 0 0 0.25rem rgba(3, 67, 141, 0.25);
+  -webkit-box-shadow: none;
+          box-shadow: none;
   opacity: 1;
 }
 
@@ -14151,11 +14151,11 @@ fieldset:disabled .btn {
 }
 
 .link-danger {
-  color: #dc3545;
+  color: #F57375;
 }
 
 .link-danger:hover, .link-danger:focus {
-  color: #b02a37;
+  color: #f78f91;
 }
 
 .link-light {
@@ -14629,7 +14629,7 @@ fieldset:disabled .btn {
 }
 
 .border-danger {
-  border-color: #dc3545 !important;
+  border-color: #F57375 !important;
 }
 
 .border-light {
@@ -18719,6 +18719,10 @@ fieldset:disabled .btn {
   }
 }
 
+a {
+  text-decoration: none;
+}
+
 .avatar {
   width: 30px;
   height: 30px;
@@ -18736,10 +18740,19 @@ fieldset:disabled .btn {
   border: 2px solid #03438D;
 }
 
-.sidebar .icon:hover {
+.sidebar li a:hover {
+  background-color: #f8f9fa;
+}
+
+.sidebar li a:hover .icon {
   color: #E2EDFA;
   background-color: #03438D;
   border: 2px solid #E2EDFA;
+}
+
+.sidebar li a:hover .user {
+  -webkit-transform: scale(1.125);
+          transform: scale(1.125);
 }
 
 body {
@@ -18761,6 +18774,11 @@ body {
 .add-post-btn {
   -webkit-box-shadow: -0.125rem 0.125rem 0 0.25rem #212529;
           box-shadow: -0.125rem 0.125rem 0 0.25rem #212529;
+}
+
+.add-post-btn:active, .add-post-btn:focus, .add-post-btn:active:focus {
+  -webkit-box-shadow: -0.2rem 0.1rem 0 0.25rem #212529;
+          box-shadow: -0.2rem 0.1rem 0 0.25rem #212529;
 }
 
 .posts-list .card {
@@ -18816,6 +18834,6 @@ body {
 
 .add-posts .alert-text {
   display: none;
-  color: #dc3545;
+  color: #F57375;
 }
 /*# sourceMappingURL=style.css.map */
