--- a/scss/stylesheets/style.scss
+++ b/scss/stylesheets/style.scss
@@ -3,6 +3,7 @@
 @import "./helpers/variables";
 @import "./helpers/utilities";
 @import "../../node_modules/bootstrap/scss/bootstrap";
+@import "./base";
 @import "./layout";
 @import "./pages/posts";
 @import "./pages/addPost";
