--- a/scss/stylesheets/_layout.scss
+++ b/scss/stylesheets/_layout.scss
@@ -28,7 +28,7 @@
   }
 }
 body {
-  background-color: #EFECE7;
+  background-color: $background;
   background-image: linear-gradient(90deg, rgba(112, 112, 112, 0.3) 1%, transparent 0), linear-gradient(rgba(112, 112, 112, 0.3) 1%, transparent 0);
   background-size: 80px 80px;
 }
@@ -36,13 +36,58 @@ body {
   font-weight: 900;
   font-size: 1.5rem;
 }
+.navbar {
+  .navbar-item:hover {
+    .list-group {
+      display: block;
+    }
+    .navbar-link {
+      background-color: $background;
+      border-radius: $border-radius-pill;
+    }
+  } 
+  
+  .list-group {
+    display: none;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 0;
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 100%;
+      top: 0.5rem;
+      right: -0.5rem;
+      background-color: $white;
+      border: 2px solid $dark;
+      z-index: -1;
+    }
+  }
+}
 .user-name {
   font-weight: bold;
 }
-.add-post-btn {
-  box-shadow: -0.125rem 0.125rem 0 0.25rem $dark;
-  &:active, &:focus , &:active:focus{
-    box-shadow: -0.2rem 0.1rem 0 0.25rem $dark;
-    
+.btn-primary {
+  box-shadow: -2px 2px 0px $dark;
+  border: 2px solid $dark;
+  &:active, &:focus, &:hover, &:active:focus{
+    background-color: $secondary;
+    color: $dark;
   }
+}
+.board {
+  box-shadow: -8px 8px 0px $gray-500;
+  padding: 70px 0;
+  &-title {
+    font-family: 'Paytone One', sans-serif;
+    font-size: 60px;
+  }
+}
+.btn-primary:disabled {
+  background-color: $gray-500;
+  border: 2px solid $gray-700;
+  color: $white;
 }
