--- a/scss/stylesheets/style.scss
+++ b/scss/stylesheets/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;700&family=Paytone+One&display=swap');
 @import "vendor/bootstrap-icons";
 @import "../../node_modules/bootstrap/scss/functions";
 @import "./helpers/variables";
@@ -7,3 +8,4 @@
 @import "./layout";
 @import "./pages/posts";
 @import "./pages/addPost";
+@import "./pages/profile";
